--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/Login/loginCtrl.js"></script>
+
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.js"></script>
+
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
