--- a/www/index.html
+++ b/www/index.html
@@ -14,15 +14,16 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/Login/loginCtrl.js"></script>
-
-    <script src="lib/firebase/firebase.js"></script>
-    <script src="lib/angularfire/dist/angularfire.js"></script>
+    <script src="js/Login/LoginCtrl.js"></script>
+    <script src="js/Message/MessageCtrl.js"></script>
+    <script src="js/Message/NewMessageCtrl.js"></script>
 
   </head>
   <body ng-app="starter">
