--- a/www/index.html
+++ b/www/index.html
@@ -14,16 +14,19 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/firebase/firebase.js"></script>
-    <script src="lib/angularfire/dist/angularfire.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/Login/LoginCtrl.js"></script>
     <script src="js/Message/MessageCtrl.js"></script>
     <script src="js/Message/NewMessageCtrl.js"></script>
+    <script src="js/Login/LoginCtrl.js"></script>
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
 
   </head>
   <body ng-app="starter">
