--- a/www/index.html
+++ b/www/index.html
@@ -16,17 +16,19 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/Message/MessageCtrl.js"></script>
-    <script src="js/Message/NewMessageCtrl.js"></script>
-    <script src="js/Login/LoginCtrl.js"></script>
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
 
     <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
+    <script src="lib/angularfire.min.js"></script>
+    <script src="lib/firebase.js"></script>
+    <!-- your app's js -->
+    <script src="js/app.js"></script>
+    <script src="js/Message/MessageCtrl.js"></script>
+    <script src="js/Message/NewMessageCtrl.js"></script>
+    <script src="js/Message/LobbyCtrl.js"></script>
+    <script src="js/Login/LoginCtrl.js"></script>
+
 
   </head>
   <body ng-app="starter">
