--- a/www/index.html
+++ b/www/index.html
@@ -22,13 +22,17 @@
     <!-- AngularFire -->
     <script src="lib/angularfire.min.js"></script>
     <script src="lib/firebase.js"></script>
+    <!-- Libs -->
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/angular-resource/angular-resource.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/Message/MessageCtrl.js"></script>
     <script src="js/Message/NewMessageCtrl.js"></script>
     <script src="js/Message/LobbyCtrl.js"></script>
     <script src="js/Login/LoginCtrl.js"></script>
-
+    <script src="js/Login/loginFactory.js"></script>
+    <script src="js/Login/loginService.js"></script>
 
   </head>
   <body ng-app="starter">
