--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,8 @@
     <script src="js/Login/LoginCtrl.js"></script>
     <script src="js/Login/loginFactory.js"></script>
     <script src="js/Login/loginService.js"></script>
+    <script src="js/Users/UsersCtrl.js"></script>
+    <script src="js/Users/usersFactory.js"></script>
 
   </head>
   <body ng-app="starter">
