--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,8 @@
     <!-- AngularFire -->
     <script src="lib/angularfire.min.js"></script>
     <script src="lib/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
     <!-- Libs -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
