--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/ion-md-input/css/ion-md-input.min.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -27,6 +28,7 @@
     <!-- Libs -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
+    <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/Message/MessageCtrl.js"></script>
