locations and checkin

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,8 @@
     <script src="js/Login/loginService.js"></script>
     <script src="js/Users/UsersCtrl.js"></script>
     <script src="js/Users/usersFactory.js"></script>
+    <script src="js/Location/locationsCtrl.js"></script>
+    <script src="js/Location/locationsFactory.js"></script>
 
   </head>
   <body ng-app="starter">
