--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="lib/ion-md-input/css/ion-md-input.min.css" rel="stylesheet">
     <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
-
+    <link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -30,9 +30,8 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
-    <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
-
+    <script src="lib/ion-gallery/dist/ion-gallery.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/Message/MessageCtrl.js"></script>
