Fix profile page

--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
   </head>
   <body ng-app="starter">
     <ion-nav-view>
-      <ion-tabs ng-if="isLogged" class="tabs-positive tabs-icon-top">
+      <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
         <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
           icon-off="ion-compass" ng-click="allLocations()">
