--- a/www/index.html
+++ b/www/index.html
@@ -22,12 +22,11 @@
     <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
 
     <!-- AngularFire -->
-    <script src="lib/angularfire.min.js"></script>
-    <script src="lib/firebase.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
     <script src="lib/firebase/firebase.js"></script>
     <!-- Libs -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/angular-nl2br/angular-nl2br.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
