--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,8 @@
     <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
     <script src="lib/ion-gallery/dist/ion-gallery.min.js"></script>
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/Message/MessageCtrl.js"></script>
